Ajusta menu de INDEXPUBLIC con componentes LOGIN y REGISTRARH

--- a/src/componentes/tvs/paginacion/paginador.css
+++ b/src/componentes/tvs/paginacion/paginador.css
@@ -30,7 +30,7 @@
     height: 25px;
     cursor: pointer;
     text-decoration: none !important;
-    color: #5C5C5C;
+    color: #1c1d25;
     border-radius: 20px;
 }
 
