--- a/src/index.css
+++ b/src/index.css
@@ -342,6 +342,28 @@ p {
   font-weight: bold;
 }
 
+.div-total1-dashboard {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.div-elementos-total1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+}
+
+.p-info-total1 {
+  font-size: 2rem;
+}
+
+.div-pie-view {
+  margin-top: 3rem;
+  text-align: center;
+}
 
 @media (min-width: 760px) {
 
