--- a/src/index.css
+++ b/src/index.css
@@ -373,13 +373,15 @@ p {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  flex-direction: column;
 }
 
 .div-elementos-total1 {
   display: flex;
-  flex-direction: column;
   align-items: center;
   height: 100%;
+  width: 100%;
+  justify-content: space-between;
 }
 
 .p-info-total1 {
@@ -406,6 +408,13 @@ p {
   justify-content: space-between;
   align-items: center;
   height: 100%;
+}
+
+.p-label-dashboard {
+  font-size: 13px;
+  color: #1c1d25;
+  font-weight: 500;
+  margin-left: 8px;
 }
 
 @media (min-width: 760px) {
@@ -512,6 +521,17 @@ p {
     background-color: white;
     padding: 20px;
     border-radius: 6px;
+  }
+
+  .div-elementos-total1 {
+    justify-content: space-evenly;
+  }
+
+  .p-label-dashboard {
+    font-size: 20px;
+    color: #1c1d25;
+    font-weight: 500;
+    margin-left: 8px;
   }
 
 }
