--- a/src/index.css
+++ b/src/index.css
@@ -454,6 +454,14 @@ p {
   justify-content: flex-end;
 }
 
+.p-info-elementos-paginador{
+    display: flex;
+    height: 100%;
+    justify-content: flex-start;
+    align-items: flex-end;
+    font-weight: bold;
+}
+
 @media (min-width: 760px) {
 
   .bottom-custom {
